--- a/.github/workflows/binary-ready-veracode-sast-pipeline-scan.yml
+++ b/.github/workflows/binary-ready-veracode-sast-pipeline-scan.yml
@@ -11,42 +11,24 @@ on:
     types: [binary-ready-veracode-sast-pipeline-scan]
 
 jobs:
-  create-checks-run:
-    name: Create Checks Run
-    runs-on: ubuntu-latest
-    steps:
-    - uses: veracode/veracode-checks-action@main
-      name: Create Checks Run
-      id: create_checks_run
-      with:
-        token: ${{ github.event.client_payload.token }}
-        repo: ${{ github.event.client_payload.repository.full_name }}
-        sha: ${{ github.event.client_payload.sha }}
-        name: "Veracode Static Code Analysis"
-        status: 'in_progress'
-        details_url: "https://github.com/${{ github.event.client_payload.repository.owner }}/veracode/actions/runs/${{ github.run_id }}"
-    - name: Create metadata
-      id: create_metadata_json
-      run: |
-        echo '{
-          "check_run_type": "${{ github.event.client_payload.event_type }}",
-          "repository_name": "${{ github.event.client_payload.repository.name }}",
-          "check_run_id": ${{ steps.create_checks_run.outputs.check_id }},
-          "sha": "${{ github.event.client_payload.sha }}"
-        }' > workflow-metadata.json
-    - name: Save metadata
-      uses: actions/upload-artifact@v3
-      with:
-        name: workflow-metadata
-        path: workflow-metadata.json
+  register:
+    uses: ./.github/workflows/veracode-check-run.yml
+    with:
+      check_run_name: ${{ github.workflow }}
+      head_sha: ${{ github.event.client_payload.sha }}
+      repositroy_owner: ${{ github.event.client_payload.repository.owner }}
+      repositroy_name: ${{ github.event.client_payload.repository.name }}
+      event_type: ${{ github.event.client_payload.event_type }}
+      github_token: ${{ github.event.client_payload.token }}
+      run_id: ${{ github.run_id }}
         
   pipeline_scan:
-    needs: create-checks-run
+    needs: register
     runs-on: ubuntu-latest
     steps:
     - name: Download artifact
       id: download-artifact
-      uses: dawidd6/action-download-artifact@v2
+      uses: actions/download-artifact@v4
       with:
         github_token: ${{ github.event.client_payload.token }}
         run_id: ${{ github.event.client_payload.run_id }}
