--- a/.github/workflows/binary-ready-veracode-sast-pipeline-scan.yml
+++ b/.github/workflows/binary-ready-veracode-sast-pipeline-scan.yml
@@ -30,9 +30,9 @@ jobs:
       id: download-artifact
       uses: actions/download-artifact@v4
       with:
-        github_token: ${{ github.event.client_payload.token }}
-        run_id: ${{ github.event.client_payload.run_id }}
-        repo: ${{ github.event.client_payload.repository.full_name }}
+        github-token: ${{ github.event.client_payload.token }}
+        run-id: ${{ github.event.client_payload.run_id }}
+        repository: ${{ github.event.client_payload.repository.full_name }}
     - name: Get the name of the downloaded files
       run: |
         artifact_file=$(ls -1 ./veracode-artifact | head -n 1)
