--- a/.github/workflows/binary-ready-veracode-sast-pipeline-scan.yml
+++ b/.github/workflows/binary-ready-veracode-sast-pipeline-scan.yml
@@ -31,8 +31,10 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         github-token: ${{ github.event.client_payload.token }}
-        run-id: ${{ github.event.client_payload.run_id }}
         repository: ${{ github.event.client_payload.repository.full_name }}
+        run-id: ${{ github.event.client_payload.run_id }}
+    - name: Display structure of downloaded files
+      run: ls -R
     - name: Get the name of the downloaded files
       run: |
         echo "run_id=${{ github.event.client_payload.run_id }}"
