--- a/.github/workflows/binary-ready-veracode-sast-pipeline-scan.yml
+++ b/.github/workflows/binary-ready-veracode-sast-pipeline-scan.yml
@@ -33,19 +33,59 @@ jobs:
         github-token: ${{ github.event.client_payload.token }}
         repository: ${{ github.event.client_payload.repository.full_name }}
         run-id: ${{ github.event.client_payload.run_id }}
-    - name: Display structure of downloaded files
-      run: ls -R
+
     - name: Get the name of the downloaded files
       run: |
-        echo "run_id=${{ github.event.client_payload.run_id }}"
         artifact_file=$(ls -1 ./veracode-artifact | head -n 1)
         echo "veracode_artifact=$artifact_file" >> $GITHUB_ENV
+
     - name: Veracode Pipeline-Scan
       id: pipeline-scan
       uses: veracode/Veracode-pipeline-scan-action@v1.0.10
       with:
         vid: ${{ secrets.VERACODE_API_ID }}
         vkey: ${{ secrets.VERACODE_API_KEY }}
+        veracode_policy_name: ${{ inputs.policy_name }}
         file: ./veracode-artifact/${{ env.veracode_artifact }}
         fail_build: true
-        # include: bin/Verademo-dotnet.dll
+
+  results_to_security_tab:
+    needs: pipeline_scan
+    runs-on: ubuntu-latest
+    if: ${{ failure() && inputs.create_code_scanning_alert }}
+    name: Send report to Security tab
+    steps:
+      - name: Get scan results
+        uses: actions/download-artifact@v3
+        with:
+          name: "Veracode Pipeline-Scan Results"
+      - name: Convert pipeline scan output to SARIF format
+        id: convert
+        uses: Veracode/veracode-pipeline-scan-results-to-sarif@v2.0.0
+        with:
+          pipeline-results-json: filtered_results.json
+          output-results-sarif: veracode-results.sarif
+          repo_owner: ${{ inputs.owner }}
+          repo_name: ${{ inputs.repo }}
+          commitSHA: ${{ inputs.sha }}
+          ref: ${{ inputs.ref }}
+          githubToken: ${{ inputs.token }}
+
+# This step will import the flaws from the step above
+  create-issues:
+    needs: pipeline_scan
+    if: ${{ inputs.create_issue && failure()}}
+    runs-on: ubuntu-latest
+    name: Send report to issue tab
+    steps:
+      - name: Get scan results
+        uses: actions/download-artifact@v3
+        with:
+          name: 'Veracode Pipeline-Scan Results'
+      - name: Create flaws as issues
+        uses: veracode/veracode-flaws-to-issues@v2.2.22
+        with:
+          scan-results-json: 'filtered_results.json'
+          repo_owner: ${{ inputs.owner }}
+          repo_name: ${{ inputs.repo }}
+          github-token: ${{ inputs.token }}
