--- a/veracode.yml
+++ b/veracode.yml
@@ -36,8 +36,8 @@ veracode_static_scan:
   # workflow for each repository.
   #If enabled, you will be able to view static findings as a security issue in GitHub.
   use_custom_workflow: veracode-build
-  create_code_scanning_alert: false
-  create_issue: false
+  create_code_scanning_alert: true
+  create_issue: true
   profile: ENTER_PROFILE_NAME
   #If enabled, the scan will be triggered when a command matches by either creating an issue or adding a comment to an issue.
   issues:
