--- a/.github/workflows/binary-ready-veracode-sast-sandbox-scan.yml
+++ b/.github/workflows/binary-ready-veracode-sast-sandbox-scan.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Get the name of the downloaded files
       run: |
-        artifact_file=$(ls -1 ./veracode_artifact_directory | head -n 1)
+        artifact_file=$(ls -1 ./veracode-artifact | head -n 1)
         echo "veracode_artifact=$artifact_file" >> $GITHUB_ENV
 
     - name: Veracode Sandbox-Scan Action step
