--- a/.github/workflows/binary-ready-veracode-sast-sandbox-scan.yml
+++ b/.github/workflows/binary-ready-veracode-sast-sandbox-scan.yml
@@ -54,3 +54,4 @@ jobs:
         sandboxname: GitHub App Scans-${{ github.event.client_payload.repository.branch }}
         include: ${{ github.event.client_payload.modules_to_scan }}
         failbuild: true
+        deleteincompletescan: true
