--- a/.github/workflows/veracode-check-run.yml
+++ b/.github/workflows/veracode-check-run.yml
@@ -34,6 +34,10 @@ on:
         description: 'event_type triggered by the GitHub App (provided by GitHub app via `github.event.client_payload.event_type`)'
         required: true
         type: string
+      branch:
+        description: 'branch triggered by the GitHub App (provided by GitHub app via `github.event.client_payload.repository.branch`)'
+        required: true
+        type: string
 jobs:
   create_check_run:
     runs-on: ubuntu-latest
@@ -62,6 +66,8 @@ jobs:
             "check_run_type": "${{ inputs.event_type }}",
             "repository_name": "${{ inputs.repositroy_name }}",
             "check_run_id": ${{ fromJson(steps.create_check_run.outputs.data).id }}
+            "branch": "${{ inputs.branch }}",
+            "sha": "${{ inputs.head_sha }}",
           }' > workflow-metadata.json
           echo "run_id=${{ fromJson(steps.create_check_run.outputs.data).id }}" >> "GITHUB_OUTPUT"
         shell: bash
