--- a/.github/workflows/veracode-check-run.yml
+++ b/.github/workflows/veracode-check-run.yml
@@ -65,9 +65,9 @@ jobs:
           echo '{
             "check_run_type": "${{ inputs.event_type }}",
             "repository_name": "${{ inputs.repositroy_name }}",
-            "check_run_id": ${{ fromJson(steps.create_check_run.outputs.data).id }}
+            "check_run_id": ${{ fromJson(steps.create_check_run.outputs.data).id }},
             "branch": "${{ inputs.branch }}",
-            "sha": "${{ inputs.head_sha }}",
+            "sha": "${{ inputs.head_sha }}"
           }' > workflow-metadata.json
           echo "run_id=${{ fromJson(steps.create_check_run.outputs.data).id }}" >> "GITHUB_OUTPUT"
         shell: bash
